Сделали заголовки, прописали инструкции к командам

--- a/Введение в контроль версий.md
+++ b/Введение в контроль версий.md
@@ -1,14 +1,25 @@
+# Первый файл по введению в контроль версий
 
-hello world!
+## Выделение текста
 
+Чтобы выделить слово курсивом, надо взять его с двух сторон в звездочки      
 *Курсив*
+
+Чтобы выделить слово жирным, нужно взять его с двух сторон в двойные звездочки
 
 **Выделение жирным**
 
+Чтобы зачеркнуть слово, нужно взять его в двойные тильды
+
+~~Зачеркнуть~~ 
+
+Чтобы составить список без нумерации, нужно в начале строки поставить звездочку и пробел
 
 * элемент 1
 * элемент 2
 * элемент 3
+
+Чтобы составить список с нумерацией, нужно в начале строки поставить цифру, точку и пробел
 
 1. элемент
 2. элемент
